<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/panel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal"
        android:weightSum="16">

        <ImageView
            android:id="@+id/cart_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="2"
            android:src="@drawable/ic_shopping_cart_svgrepo_com"
            android:tint="@color/white"
            tools:ignore="UseAppTint" />

        <TextView
            android:id="@+id/AboutUs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="13"
            android:gravity="center"
            android:text="@string/user_details"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>



        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:src="@android:drawable/ic_delete"
            android:tint="@color/white"
            tools:ignore="UseAppTint" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/Image_User"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_person_outline_24"
                android:background="@drawable/shadow"
                />

            <TextView
                android:id="@+id/Text_UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="40dp"
                android:textColor="@color/black"
                android:text="@string/name" />



        </LinearLayout>

        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="4dp"
            android:background="?android:attr/listDivider"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >

            <ImageView
                android:id="@+id/Image_Email"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_email_24"
                />

            <TextView
                android:id="@+id/text_email1"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/email" />

            <TextView
                android:id="@+id/text_email"
                android:layout_marginStart="40dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/user_gmail_com" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >

            <ImageView
                android:id="@+id/Image_Phone"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_phone_android_24"
                />

            <TextView
                android:id="@+id/text_Phone1"
                android:layout_marginStart="15dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/text_Phone"
                android:layout_marginStart="35dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/phone2" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >

            <ImageView
                android:id="@+id/Image_Address"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_person_pin_circle_24"
                />

            <TextView
                android:id="@+id/text_Address1"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/address" />

            <TextView
                android:id="@+id/text_Address"
                android:layout_marginStart="30dp"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/address2" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="233dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:background="#000000"
        >



        <View
            android:id="@+id/divider5"
            android:layout_marginStart="100dp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white" />


        <ImageView
            android:id="@+id/button_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/ic_about_information_info_help_svgrepo_com"
            app:tint="@color/white" />


    </LinearLayout>


</LinearLayout>