<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".SeventhActivity">

    <LinearLayout
        android:id="@+id/panel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="horizontal"
        android:weightSum="16"
        >

        <TextView
            android:id="@+id/AboutUs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="15.5"
            android:gravity="center"
            android:text="Buy here"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>



        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:src="@android:drawable/ic_delete"
            android:tint="@color/white"
            tools:ignore="UseAppTint" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@drawable/shadow"
        android:padding="10dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/price_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items" />

            <TextView
                android:id="@+id/price_item2"
                android:layout_marginStart="240dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/_150_00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:id="@+id/price_shipping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipping" />

            <TextView
                android:id="@+id/price_shipping2"
                android:layout_marginStart="240dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/_150_00" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            >

            <TextView
                android:id="@+id/price_charges"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/import_charges" />

            <TextView
                android:id="@+id/price_charges2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="200dp"
                android:text="@string/_150_00"
                android:textColor="@color/black" />

        </LinearLayout>


        <View
            android:id="@+id/divider6"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            >

            <TextView
                android:id="@+id/price_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_total"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/price_total_amount"
                android:layout_marginStart="230dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/_150_00" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="448dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:background="#000000"
        >

        <ImageView
            android:id="@+id/button_User"
            android:layout_marginStart="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:src="@drawable/ic_user_profile_svgrepo_com"
            app:tint="@color/white" />

        <View
            android:id="@+id/divider5"
            android:layout_marginStart="40dp"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/white" />


        <ImageView
            android:id="@+id/button_Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:src="@drawable/ic_about_information_info_help_svgrepo_com"
            app:tint="@color/white" />


    </LinearLayout>
</LinearLayout>